--- a/package.yaml
+++ b/package.yaml
@@ -1,10 +1,10 @@
 name:                BattleShips
 version:             0.1.0.0
-github:              "githubuser/BattleShips"
+github:              "justas68/BattleShips"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2018 Author name here"
+author:              "Justas Tvarijonas"
+maintainer:          "tvarijonasjustas@gmail.com"
+copyright:           "2018 Justas Tvarijonas"
 
 extra-source-files:
 - README.md
@@ -35,14 +35,23 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - BattleShips
+    - aeson
+    - lens
+    - random
+    - HUnit
+    - wreq
+    - text
+    - bytestring
+    - data-default-class
 
 tests:
   BattleShips-test:
-    main:                Spec.hs
+    main:                Test.hs
     source-dirs:         test
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - HUnit
     - BattleShips
