--- a/stack.yaml
+++ b/stack.yaml
@@ -42,7 +42,7 @@ packages:
 # flags: {}
 
 # Extra package databases containing global packages
-extra-package-dbs: [vector]
+extra-package-dbs: []
 
 # Control whether we use the GHC we find on the path
 # system-ghc: true
